--- a/retailer.html
+++ b/retailer.html
@@ -572,7 +572,8 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
  </div> 
 <script>
 const API = "https://shopbacked-vmhs.onrender.com";
-
+let currentRetailerLoc = null;
+let currentWholesalerLoc = null;
 let selectedProduct = null;
 let cart = [];
 let cartDeliveryCharge = 0;
