--- a/retailer.html
+++ b/retailer.html
@@ -539,7 +539,9 @@ border-radius: 4px;
  </div>   
 <script>  
 const API = "https://shopbacked-vmhs.onrender.com";  let selectedProduct = null;
-let cart = [];
+let currentRetailerLoc = null;
+let currentWholesalerLoc = null;
+  let cart = [];
 let cartDeliveryCharge = 0;
 let currentWholesalerId = null;
 // DOM elements
